2013-04-19  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Wizard to kickstart a new Sphinx project
	* [TASK] Install official TYPO3 ReStructuredText Tools provided by the Documentation Team

2013-04-18  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Extension documentation
	* [!!!][TASK] FAL-compatibility: extension requires TYPO3 6.x
	* [TASK] Backend module (File > Sphinx Console) to compile documentation

2013-04-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add support for JSON and check of links
	* [TASK] Add Sphinx-Builder service (HTML)
	* [TASK] Wizard to import Sphinx in EM
	* [TASK] Prototyping